2001-09-07  Cristy  <cristy@mystic.es.dupont.com>
	* DispatchImage() now properly handles grayscale images.