@@ -1,2 +1,3 @@
 2001-09-07  Cristy  <cristy@mystic.es.dupont.com>
+	* Added -background to convert program usage text.
 	* DispatchImage() now properly handles grayscale images.
